[gd_scene load_steps=12 format=3 uid="uid://c4jm11d6nulue"]

[ext_resource type="Texture2D" uid="uid://pvxborls7ty2" path="res://Sprites_img/icon.svg" id="1_k5f4k"]
[ext_resource type="PackedScene" uid="uid://lre4whw1itk" path="res://Scenes/Player.tscn" id="2_6phgx"]
[ext_resource type="Texture2D" uid="uid://brobevq8w1f6h" path="res://Sprites_img/Vencel.png" id="3_1ukdm"]
[ext_resource type="Script" uid="uid://bea1stqc3oav8" path="res://Scripts/vencel_the_enemy.gd" id="4_0xrym"]
[ext_resource type="Texture2D" uid="uid://bbbuma4oa3l5q" path="res://Sprites_img/Health.png" id="5_c0r4e"]
[ext_resource type="Script" uid="uid://b32tesr0qb3ii" path="res://Scripts/heal.gd" id="6_m0h5h"]
[ext_resource type="PackedScene" path="res://Scenes/cracker.tscn" id="7_20uw2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vonw3"]
texture = ExtResource("1_k5f4k")
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_oi3di"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_vonw3")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xrym"]
size = Vector2(444.21603, 544.73206)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_20uw2"]
size = Vector2(64, 64)

[node name="Level" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_oi3di")
format = 2
layer_0/tile_data = PackedInt32Array(65530, 65536, 0, 65531, 65536, 0, 65532, 65536, 0, 65533, 65536, 0, 65534, 65536, 0, 65535, 65536, 0, 0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 65529, 65536, 0, 65528, 65536, 0, 65527, 65536, 0, 65526, 65536, 0, -65533, 65536, 0, -131069, 65536, 0, -196605, 65536, 0, -262141, 65536, 0, -327677, 65536, 0, -393213, 65536, 0, -458749, 65536, 0, -524285, 65536, 0, -589818, 65536, 0, -589817, 65536, 0, -589816, 65536, 0, -589815, 65536, 0, -589814, 65536, 0, -262146, 65536, 0, -327682, 65536, 0, -393218, 65536, 0, -458754, 65536, 0, -524290, 65536, 0, -589826, 65536, 0, -655362, 65536, 0, -720898, 65536, 0, -786434, 65536, 0, -851970, 65536, 0, -917506, 65536, 0, 65525, 65536, 0, 65524, 65536, 0, -589819, 65536, 0, -589820, 65536, 0, -589821, 65536, 0, -589813, 65536, 0, -589812, 65536, 0, 65523, 131072, 0, 65522, 131072, 0, 65521, 131072, 0, 65520, 131072, 0, 65519, 131072, 0, 65518, 131072, 0, 65517, 131072, 0, 65516, 131072, 0, 65515, 131072, 0, 65514, 131072, 0, 65510, 131072, 0, 65509, 131072, 0, 65508, 131072, 0, 65507, 131072, 0, 65506, 131072, 0, 65505, 131072, 0, 65504, 131072, 0, 65503, 131072, 0, 65502, 131072, 0, 65501, 131072, 0, 65500, 131072, 0, 65513, 131072, 0, 65512, 131072, 0, 65511, 131072, 0, 65499, 131072, 0, 65498, 131072, 0, 65497, 131072, 0, 65496, 131072, 0, 65495, 131072, 0, 65494, 131072, 0, 65493, 131072, 0, 65492, 131072, 0, 131028, 131072, 0, 131027, 131072, 0, 131026, 131072, 0, 131025, 131072, 0, 131024, 131072, 0, 131023, 131072, 0, 65487, 131072, 0, 65486, 131072, 0, 65485, 131072, 0, 65484, 131072, 0, 65483, 131072, 0, 65482, 131072, 0, 65481, 131072, 0, 65480, 131072, 0, 65479, 131072, 0, 65478, 131072, 0, 65477, 131072, 0, 65476, 131072, 0, 65475, 131072, 0, 65474, 131072, 0, 65473, 131072, 0, 65472, 131072, 0, 65471, 131072, 0, 65470, 131072, 0, 65469, 131072, 0, 65468, 131072, 0, 65467, 131072, 0, 65466, 131072, 0, 65491, 131072, 0, 65490, 131072, 0, 65489, 131072, 0, 65488, 131072, 0, 65465, 131072, 0, 65464, 131072, 0, 65463, 131072, 0, 65462, 131072, 0, 65461, 131072, 0, 65460, 131072, 0, 65459, 131072, 0, 65458, 131072, 0, 65457, 131072, 0, 65456, 131072, 0, 65455, 131072, 0, 65454, 131072, 0, 65453, 131072, 0, 65452, 131072, 0, 65451, 131072, 0, 65450, 131072, 0, 65449, 131072, 0, 65448, 131072, 0, 65447, 131072, 0, 65446, 131072, 0, 65445, 131072, 0, 65444, 131072, 0, 65443, 131072, 0, 65442, 131072, 0, 65441, 131072, 0, 65440, 131072, 0, 65439, 131072, 0, 65438, 131072, 0, 65437, 131072, 0, 65436, 131072, 0, 65435, 131072, 0, 65434, 131072, 0, 65433, 131072, 0, 65432, 131072, 0, 65431, 131072, 0, 65430, 131072, 0, 65429, 131072, 0, 65428, 131072, 0, 65427, 131072, 0, 65426, 131072, 0, 65425, 131072, 0, 65424, 131072, 0, 65423, 131072, 0, 130959, 131072, 0, 130958, 131072, 0, 130957, 131072, 0, 65421, 131072, 0, 65422, 131072, 0, 65420, 131072, 0, 65419, 131072, 0, 65418, 131072, 0, 65417, 131072, 0, 65416, 131072, 0, 65415, 131072, 0, 65414, 131072, 0, 65413, 131072, 0, 65412, 131072, 0, 65411, 131072, 0, 65410, 131072, 0, -327733, 131072, 0, -327734, 131072, 0, -327735, 131072, 0, -327736, 131072, 0, -196656, 131072, 0, -196655, 131072, 0, -196654, 131072, 0, -196653, 131072, 0, -196652, 131072, 0, -196651, 131072, 0, -327745, 131072, 0, -327746, 131072, 0, -327747, 131072, 0, -327748, 131072, 0, -327749, 131072, 0, -327750, 131072, 0, -327751, 131072, 0, -327752, 131072, 0, -393295, 131072, 0, -393296, 131072, 0, -393297, 131072, 0, -327762, 131072, 0, -327763, 131072, 0, -327764, 131072, 0, -393308, 131072, 0, -393309, 131072, 0, -393310, 131072, 0, -393311, 131072, 0, -393312, 131072, 0, -393313, 131072, 0, -393314, 131072, 0, -393315, 131072, 0, -327786, 131072, 0, -327787, 131072, 0, -327788, 131072, 0, -327789, 131072, 0, -327790, 131072, 0, -327791, 131072, 0, -327792, 131072, 0, 65409, 262144, 0, 65408, 262144, 0, 65407, 262144, 0, 65406, 262144, 0, 65405, 262144, 0, 65404, 262144, 0, 65403, 262144, 0, 65402, 262144, 0, 65401, 262144, 0, 65400, 262144, 0, 65399, 262144, 0, 65398, 262144, 0, 65397, 262144, 0, 65396, 262144, 0, 65394, 262144, 0, 65393, 262144, 0, 65395, 262144, 0, 65392, 262144, 0, 65391, 262144, 0, 65390, 262144, 0, 65389, 262144, 0, 65388, 262144, 0, 65387, 262144, 0, 65386, 262144, 0, 65385, 262144, 0, 65384, 262144, 0, 65383, 262144, 0, 65382, 262144, 0, 65381, 262144, 0, 65380, 262144, 0, 65379, 262144, 0, 65378, 262144, 0, 65377, 262144, 0, 65376, 262144, 0, 65375, 262144, 0, 65374, 262144, 0, 65373, 262144, 0, 65372, 262144, 0, 65371, 262144, 0, 65370, 262144, 0, 65369, 262144, 0, 65368, 262144, 0, 65367, 262144, 0, 65366, 262144, 0, 65365, 262144, 0, 65364, 262144, 0, 65363, 262144, 0, 65362, 262144, 0, 65361, 262144, 0, 65360, 262144, 0, 65359, 262144, 0, 65358, 262144, 0, 65357, 262144, 0, 65356, 262144, 0, 65355, 262144, 0, 65354, 262144, 0, 65353, 262144, 0, 65352, 262144, 0, 65351, 262144, 0, 65350, 262144, 0, 65349, 262144, 0, 65348, 262144, 0, 65347, 262144, 0, 65346, 262144, 0, 65345, 262144, 0, 65344, 262144, 0, 65343, 262144, 0, 65342, 262144, 0, 65341, 262144, 0, 65340, 262144, 0, 65339, 262144, 0, 65338, 262144, 0, 65337, 262144, 0, 65336, 262144, 0, 65335, 262144, 0, 65334, 262144, 0, 65333, 262144, 0, 65332, 262144, 0, 65331, 262144, 0, 65330, 262144, 0, 65329, 262144, 0, 65328, 262144, 0, 65327, 262144, 0, 65326, 262144, 0, 65325, 262144, 0, 65324, 262144, 0, 65323, 262144, 0, 65322, 262144, 0, 65321, 262144, 0, 65320, 262144, 0, 65319, 262144, 0, 65318, 262144, 0, -327802, 262144, 0, -458883, 262144, 0, -327822, 262144, 0, -458902, 262144, 0, -393381, 262144, 0, -458910, 262144, 0, -458924, 262144, 0, -655534, 262144, 0, -589999, 262144, 0, -524464, 262144, 0, -524467, 262144, 0, -458932, 262144, 0, -393397, 262144, 0, -327862, 262144, 0, -393399, 262144, 0, -458936, 262144, 0, -458937, 262144, 0, -524474, 262144, 0, -721085, 262144, 0, -524483, 262144, 0, -524484, 262144, 0, -852169, 262144, 0, -393420, 262144, 0, -458956, 262144, 0, -327894, 262144, 0, -327893, 262144, 0, -590033, 262144, 0, -786651, 262144, 0, 65317, 262144, 0, 65316, 262144, 0, 65315, 262144, 0, 65314, 262144, 0, 65313, 262144, 0, 65312, 262144, 0, 65311, 262144, 0, 65310, 262144, 0, 65309, 262144, 0, 65308, 262144, 0, 65307, 262144, 0, 65306, 262144, 0, 65305, 262144, 0, 65304, 262144, 0, 65303, 262144, 0, 65302, 262144, 0, 65301, 262144, 0, 65300, 262144, 0, 65299, 262144, 0, 65298, 262144, 0, 65297, 262144, 0, 65296, 262144, 0, 65295, 262144, 0, 65294, 262144, 0, 65293, 262144, 0, 65292, 262144, 0, -721124, 262144, 0, -721119, 262144, 0, -655583, 262144, 0, -524513, 262144, 0, -524514, 262144, 0, -458979, 262144, 0, -458980, 262144, 0, -393445, 262144, 0, -393446, 262144, 0, -327917, 262144, 0, -590064, 262144, 0, -590068, 262144, 0, -590069, 262144, 0, -524534, 262144, 0, -524535, 262144, 0, -459000, 262144, 0, -459001, 262144, 0, -524528, 262144, 0, -458992, 262144, 0, 65291, 262144, 0, 65290, 262144, 0, 65289, 262144, 0, 65288, 262144, 0, 65287, 262144, 0, 65286, 262144, 0, 65285, 262144, 0, 65284, 262144, 0, 65283, 262144, 0, 65282, 262144, 0, 65281, 262144, 0, 65280, 262144, 0, 65279, 262144, 0, 65278, 262144, 0, 65277, 262144, 0, 65276, 262144, 0, 65275, 262144, 0, 65274, 262144, 0, 65273, 262144, 0, 65272, 262144, 0, 65271, 262144, 0, 65270, 262144, 0, 65269, 262144, 0, 65268, 262144, 0, 65267, 262144, 0, 65266, 262144, 0, 65265, 262144, 0, 65264, 262144, 0, 65263, 262144, 0, -655615, 262144, 0, -590079, 262144, 0, -524546, 262144, 0, -459011, 262144, 0, -655624, 262144, 0, -721161, 262144, 0, -524554, 262144, 0, -459018, 262144, 0, -393482, 262144, 0, -590095, 262144, 0, -393490, 262144, 0, -327954, 262144, 0, -458970, 262144, 0, -393434, 262144, 0, -393438, 262144, 0, -655573, 262144, 0)

[node name="Player" parent="." instance=ExtResource("2_6phgx")]
position = Vector2(-87, -114)

[node name="Vencel the enemy" type="Sprite2D" parent="."]
position = Vector2(-375.00003, -252)
scale = Vector2(0.61681706, 0.6168171)
texture = ExtResource("3_1ukdm")

[node name="Area2D" type="Area2D" parent="Vencel the enemy"]
collision_layer = 2
script = ExtResource("4_0xrym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vencel the enemy/Area2D"]
position = Vector2(-1.6212262, 7.4213836e-05)
scale = Vector2(0.9999999, 0.99999964)
shape = SubResource("RectangleShape2D_0xrym")

[node name="VencelHealth" type="ProgressBar" parent="Vencel the enemy/Area2D"]
offset_left = -222.10797
offset_right = 222.108
offset_bottom = 27.0

[node name="Health" type="Sprite2D" parent="."]
position = Vector2(-182, -115)
texture = ExtResource("5_c0r4e")

[node name="Area2D" type="Area2D" parent="Health"]
script = ExtResource("6_m0h5h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Health/Area2D"]
shape = SubResource("RectangleShape2D_20uw2")

[node name="cracker" parent="." instance=ExtResource("7_20uw2")]
position = Vector2(-720, -88)

[node name="cracker2" parent="." instance=ExtResource("7_20uw2")]
position = Vector2(-869, -121)

[node name="cracker3" parent="." instance=ExtResource("7_20uw2")]
position = Vector2(-1093, -122)

[node name="cracker4" parent="." instance=ExtResource("7_20uw2")]
position = Vector2(-959, -23)

[connection signal="attack_state" from="Player" to="Vencel the enemy/Area2D" method="_on_player_attack_state"]
[connection signal="area_entered" from="Vencel the enemy/Area2D" to="Vencel the enemy/Area2D" method="_on_area_entered"]
[connection signal="body_entered" from="Vencel the enemy/Area2D" to="Vencel the enemy/Area2D" method="_on_body_entered"]
[connection signal="body_entered" from="Health/Area2D" to="Health/Area2D" method="_on_body_entered"]
